# face-descriptor

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
scripts/: visual_pipeline.py
src/face_descriptor/: __init__.py
src/face_descriptor/analysis/: __init__.py  analyzers.py
src/face_descriptor/core/: __init__.py  protocols.py  types.py
src/face_descriptor/detection/: __init__.py  detectors.py
src/face_descriptor/detection/models/: scrfd_2.5g_gnkps.onnx
src/face_descriptor/inference/: __init__.py  models.py
src/face_descriptor/io/: __init__.py  readers.py
src/face_descriptor/pipeline/: __init__.py  pipeline.py
src/face_descriptor/preprocessing/: __init__.py  preprocessors.py
src/face_descriptor/reporting/: __init__.py  reporters.py
tests/: conftest.py
tests/test_detection/: test_detectors.py
tests/test_inference/: test_models.py
tests/test_io/: test_readers.py
tests/test_pipeline/: test_pipeline.py
tests/test_preprocessing/: test_preprocessors.py
tests/test_reporting/: test_reporters.py
