[build-system]
requires = ["poetry-core>=1.8", "poetry-dynamic-versioning>=1.0"]
build-backend = "poetry-dynamic-versioning.backend"

[tool.poetry]
name = "face-descriptor"
version = "0.0.0"          # gestionado por poetry-dynamic-versioning
description = "Project implementing face processing utilities from image reading and preprocessing to face model analysis and results reporting"
authors = ["Alvaro Donamaria donamariasolchagaa@gmail.com"]
readme = "README.md"
packages = [{ include = "face_descriptor", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31"
opencv-python-headless = "^4.13.0.92"
onnxruntime = "^1.24.4"
matplotlib = "^3.10.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.4"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"    # versión desde git tags (ej: v1.2.3)

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
